@@ -1,6 +1,7 @@
 version 10.2.1
 date: dd/mm/yyyy
   * better semantic checks for the Manchester expressions, with the possibility to disable such checks
+  * added the possibility to avoid semantic checks when creating triples from a Manchester expression
 
 version 10.2
 date: 26/01/2022
